# bar

./: Cargo.toml  default.nix  flake.nix  perf.data.old
src/: bar.rs  events.rs  main.rs  modules.rs  notification.rs  notification_server.rs  style.css  utils.rs
