[package]
name = "panel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
cascade = "1.0.1"
chrono = "0.4.40"
glib = "0.20.9"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
layer_shell = { version = "0.5.0", package = "gtk4-layer-shell" } 
gtk4-sys = "0.9.6"
adw = { version = "0.7.2", package = "libadwaita"}

